--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="ONE">
         <div class="header-content">
             <img src="./image/Logo.svg" alt="Logo" class="logo">
-            <img src="./image/Hum-menu.svg" alt="Menu Toggle" class="menu-toggle">
+            <img src="./image/Hum-menu.svg" alt="Menu Toggle" class="menu">
 
             <div class="LinkButton">
                 <div class="nav-links">
@@ -51,12 +51,11 @@
         <div class="Project">
             <h1>Get More Done with whitepace</h1>
             <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
-            <button class="ProjectButton1">Try Whitepace free<img src="./image/Group 212.svg" alt=""></button>        
+            <button >Try Whitepace free<img src="./image/Group 212.svg" alt=""></button>        
         </div>
         <div class="cube"></div> 
     </div>
 </section>
-
 
 
 
