--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
             <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
             <button >Try Whitepace free<img src="./image/Group 212.svg" alt=""></button>        
         </div>
-        <div class="cube"></div> 
+        <img class="cube" src="./image/image1" alt="">
+    </div>
+</section>
+
+<section class="TWO">
+    <div class="All">
+        <div class="Project">
+            <h1>Get More Done with whitepace</h1>
+            <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+            <button >Try Whitepace free<img src="./image/Group 212.svg" alt=""></button>        
+        </div>
+        <img class="cube" src="./image/image1" alt="">
     </div>
 </section>
 
