--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <img src="./image/image2" alt="" class="ManagementIMG">
     </div>
     
+    <div class="grid-item item-3">
+        <img src="./image/Work Together Image.svg" alt="" class="TogetherIMG">
+    </div>
+
     <div class="grid-item item-4">
         <div class="Management">
             <h2>Work together</h2>
@@ -77,12 +81,7 @@
             <button>Try it now<img src="./image/Group 212.svg" alt=""></button>        
         </div>
     </div>
-    
-    <div class="grid-item item-3">
-        <img src="./image/Work Together Image.svg" alt="" class="Together">
-    </div>
 </section>
-
 
 
 
