--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     </div>
 </section>
 
+
+
+
+
 <section class="grid-container">
     <div class="grid-item item-1">
         <div class="Management">
@@ -71,7 +75,7 @@
     </div>
     
     <div class="grid-item item-3">
-        <img src="./image/Work Together Image.svg" alt="" class="TogetherIMG">
+        <img src="./image/Work Together Image.svg" alt="" class="Together">
     </div>
 
     <div class="grid-item item-4">
@@ -86,6 +90,16 @@
 
 
 
+<section class="feature-section">
+    <div class="container">
+        <div class="feature-info">
+            <h2>Use as Extension</h2>
+            <p>Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
+            <button >Let’s Go<img src="./image/Group 212.svg" alt=""></button>        
+        </div>
+        <img class="feature-image" src="./image/image1" alt="">
+    </div>
+</section>
 
 
 
