--- a/index.html
+++ b/index.html
@@ -93,11 +93,26 @@
 <section class="feature-section">
     <div class="container">
         <div class="feature-info">
-            <h2>Use as Extension</h2>
+            <h2>Use as <br> Extension</h2>
             <p>Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
             <button >Let’s Go<img src="./image/Group 212.svg" alt=""></button>        
         </div>
         <img class="feature-image" src="./image/image1" alt="">
+    </div>
+</section>
+
+
+
+
+
+<section class="customization">
+    <div class="Customise">
+        <img class="Customise-image" src="./image/image2" alt="">
+        <div class="Customise-info">
+            <h2>Customise it to your needs</h2>
+            <p>Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
+            <button >Let’s Go<img src="./image/Group 212.svg" alt=""></button>        
+        </div>
     </div>
 </section>
 
