--- a/index.html
+++ b/index.html
@@ -129,20 +129,65 @@
         <div class="splide__track">
             <ul class="splide__list">
                 <li class="splide__slide">
-                    <div class="review">
-                        <!-- Add content here -->
+                    <div class="review ">
+                        <div>
+                            <span>Free</span>
+                            <span>$0</span>
+                            <span>Capture ideas and find them quickly</span>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><img src="./image/galo4ka2.svg" alt="">Sync unlimited devices</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">10 GB monthly uploads</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">200 MB max. note size</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Customize Home dashboard and access extra widgets</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Connect primary Google Calendar account</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                            </ul>
+                        </div>
+                        <button>Get Started</button>
                     </div>
                 </li>
 
                 <li class="splide__slide">
                     <div class="review">
-                        <!-- Add content here -->
+                        <div>
+                            <span>Personal</span>
+                            <span>$11.99</span>
+                            <span>Keep home and family on track</span>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><img src="./image/galo4ka.svg" alt="">Sync unlimited devices</li>
+                                <li><img src="./image/galo4ka.svg" alt="">10 GB monthly uploads</li>
+                                <li><img src="./image/galo4ka.svg" alt="">200 MB max. note size</li>
+                                <li><img src="./image/galo4ka.svg" alt="">Customize Home dashboard and access extra widgets</li>
+                                <li><img src="./image/galo4ka.svg" alt="">Connect primary Google Calendar account</li>
+                                <li><img src="./image/galo4ka.svg" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                            </ul>
+                        </div>
+                        <button>Get Started</button>
                     </div>
                 </li>
 
                 <li class="splide__slide">
                     <div class="review">
-                        <!-- Add content here -->
+                        <div>
+                            <span>Organization</span>
+                            <span>$49.99</span>
+                            <span>Capture ideas and find them quickly</span>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><img src="./image/galo4ka2.svg" alt="">Sync unlimited devices</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">10 GB monthly uploads</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">200 MB max. note size</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Customize Home dashboard and access extra widgets</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Connect primary Google Calendar account</li>
+                                <li><img src="./image/galo4ka2.svg" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                            </ul>
+                        </div>
+                        <button>Get Started</button>
                     </div>
                 </li>
             </ul>
