--- a/index.html
+++ b/index.html
@@ -198,6 +198,57 @@
 
 
 
+
+
+
+
+<section class="hero-section">
+    <div class="Access">
+        <h2>Your work, everywhere you are</h2>
+        <p>Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
+        <button>Try Taskey<img src="./image/Group 212.svg" alt="Arrow icon"></button>
+    </div>
+</section>
+
+
+
+
+
+
+<section class="grid-container">
+    <div class="grid-item item-1">
+        <div class="Management">
+            <h2>100% your data</h2>
+            <p>The app is open source and your notes are saved to an open format, so you'll always have access to them. Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.</p>
+            <button>Read more<img src="./image/Group 212.svg" alt=""></button>        
+        </div>
+    </div>
+    
+    <div class="grid-item item-2">
+        <img src="./image/YourData.svg" alt="" class="ManagementIMG">
+    </div>
+</section>
+
+
+
+
+
+<section class="sponsors">
+    <div class="sponsors-title">
+        <h2>Our sponsors</h2>
+    </div>
+    <div class="sponsors-images">
+        <img src="./image/aple.svg" alt="Apple Logo" class="sponsor-logo">
+        <img src="./image/Microsoft.svg" alt="Microsoft Logo" class="sponsor-logo">
+        <img src="./image/slack.svg" alt="Slack Logo" class="sponsor-logo">
+        <img src="./image/goog.svg" alt="Google Logo" class="sponsor-logo">
+    </div>
+</section>
+
+
+
+
+
  <script src="./splide-4.1.3/dist/js/splide.min.js"></script>
       
  <script>
