--- a/index.html
+++ b/index.html
@@ -249,6 +249,91 @@
 
 
 
+
+
+
+<section class="wrapperS">
+    <div class="wrapper">
+        <img class="whitepaceimage" src="./image/whitepace.svg" alt="Whitepace Image">
+        <div class="text-content">
+            <h2>Work with Your Favorite Apps Using whitepace</h2>
+            <p>Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success.</p>
+            <button>Read more<img src="./image/Group 212.svg" alt=""></button>        
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+<section>
+    <h2 class="UserReview">Отзывы наших студентов</h2>
+
+    <div class="splide splide2" role="group" aria-label="Splide Basic HTML Example">
+        <div class="splide__track">
+            <ul class="splide__list">
+                <li class="splide__slide">
+                    <div class="review">
+                        <div>
+                            <img src="./image/youtube.svg" alt="" class="youtube">
+                            <p>Я пришел в Техникум чтобы сменить профессию на front-end разработчика и окончательно расстаться с предыдущим местом работы. Пробуйте себя во всем, ничего не бойтесь и у вас всё получится! </p>
+                        </div>
+                        <div class="clientReview">
+                            <img src="./image/User1.jpg" alt="">
+                            <span>Руслан Мухутдинов</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="splide__slide">
+                    <div class="review">
+                        <div>
+                            <img src="./image/youtube.svg" alt="" class="youtube">
+                            <p>Я выбрал курс веб-верстальщика, потому что мне это нравится и это круто. После окончания курса, за хорошую учебу, меня пригласили на стажировку в Техникум. Будущее за IT и я не жалею что выбрал эту сферу! </p>
+                        </div>
+                        <div class="clientReview">
+                            <img src="./image/User2.jpg" alt="">
+                            <span>Юлдашев Искандер</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="splide__slide">
+                    <div class="review">
+                        <div>
+                            <img src="./image/youtube.svg" alt="" class="youtube">
+                            <p>Я увидел что Техникум всех приглашает на бесплатную лекцию по программированию. Меня это заинтересовало, после лекции я понял, что это хороший старт для карьеры. После курса я планирую дальше развиваться и двигаться вперед в этой сфере. </p>
+                        </div>
+                        <div class="clientReview">
+                            <img src="./image/User3.jpg" alt="">
+                            <span>Махмудов Джахонгир </span>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  <script src="./splide-4.1.3/dist/js/splide.min.js"></script>
       
  <script>
