--- a/index.html
+++ b/index.html
@@ -270,47 +270,59 @@
 
 
 
-<section>
-    <h2 class="UserReview">Отзывы наших студентов</h2>
+<section class="ReviewUser">
+    <h2>What Our Clients Says</h2>
 
     <div class="splide splide2" role="group" aria-label="Splide Basic HTML Example">
         <div class="splide__track">
             <ul class="splide__list">
                 <li class="splide__slide">
-                    <div class="review">
-                        <div>
-                            <img src="./image/youtube.svg" alt="" class="youtube">
-                            <p>Я пришел в Техникум чтобы сменить профессию на front-end разработчика и окончательно расстаться с предыдущим местом работы. Пробуйте себя во всем, ничего не бойтесь и у вас всё получится! </p>
+                    <div class="review2">
+                        <div class="review-text">
+                            <img src="./image/blue.svg" alt="Blue icon">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
                         </div>
-                        <div class="clientReview">
-                            <img src="./image/User1.jpg" alt="">
-                            <span>Руслан Мухутдинов</span>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="splide__slide">
-                    <div class="review">
-                        <div>
-                            <img src="./image/youtube.svg" alt="" class="youtube">
-                            <p>Я выбрал курс веб-верстальщика, потому что мне это нравится и это круто. После окончания курса, за хорошую учебу, меня пригласили на стажировку в Техникум. Будущее за IT и я не жалею что выбрал эту сферу! </p>
-                        </div>
-                        <div class="clientReview">
-                            <img src="./image/User2.jpg" alt="">
-                            <span>Юлдашев Искандер</span>
+                        <div class="borderBlack"></div>
+                        <div class="review-details">
+                            <img src="./image/Avater1.svg" alt="Avatar">
+                            <div class="review-info">
+                                <span>Oberon Shaw, MCH</span>
+                                <p class="Acquisition">Head of Talent Acquisition, North America</p>
+                            </div>
                         </div>
                     </div>
                 </li>
 
                 <li class="splide__slide">
-                    <div class="review">
-                        <div>
-                            <img src="./image/youtube.svg" alt="" class="youtube">
-                            <p>Я увидел что Техникум всех приглашает на бесплатную лекцию по программированию. Меня это заинтересовало, после лекции я понял, что это хороший старт для карьеры. После курса я планирую дальше развиваться и двигаться вперед в этой сфере. </p>
+                    <div class="review2">
+                        <div class="review-text">
+                            <img src="./image/white.svg" alt="Blue icon">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
                         </div>
-                        <div class="clientReview">
-                            <img src="./image/User3.jpg" alt="">
-                            <span>Махмудов Джахонгир </span>
+                        <div class="borderWhite"></div>
+                        <div class="review-details">
+                            <img src="./image/Avater2.svg" alt="Avatar">
+                            <div class="review-info">
+                                <span>Oberon Shaw, MCH</span>
+                                <p>Head of Talent Acquisition, North America</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="splide__slide">
+                    <div class="review2">
+                        <div class="review-text">
+                            <img src="./image/white.svg" alt="Blue icon">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                        </div>
+                        <div class="borderWhite"></div>
+                        <div class="review-details">
+                            <img src="./image/Avater3.svg" alt="Avatar">
+                            <div class="review-info">
+                                <span>Oberon Shaw, MCH</span>
+                                <p>Head of Talent Acquisition, North America</p>
+                            </div>
                         </div>
                     </div>
                 </li>
