--- a/index.html
+++ b/index.html
@@ -342,6 +342,23 @@
 
 
 
+<section class="today">
+    <div class="WhitepaceToday">
+        <h2>Try Whitepace today</h2>
+        <p>Get started for free. <br>
+            Add your whole team as your needs grow.</p>
+        <button>Try Taskey free<img src="./image/Group 212.svg" alt="Arrow icon"></button>
+        <p>On a big team? Contact sales</p>
+        <div class="SponsorIMG">
+            <img src="./image/apleLogo.svg" alt="">
+            <img src="./image/Win.svg" alt="">
+            <img src="./image/andro.svg" alt="">
+        </div>   
+    </div>
+</section>
+
+
+
 
 
 
