--- a/index.html
+++ b/index.html
@@ -362,6 +362,82 @@
 
 
 
+<footer>
+    <div class="Product">
+        <div class="ProductList">
+            <img src="./image/Logo.svg" alt="" class="LogoEnd">
+            <p>whitepace was created for the new ways we live and work. We make a better workspace around the world</p>
+        </div>
+        <div class="ProductList">
+            <span>Product</span>
+            <span>Overview</span>
+            <span>Pricing</span>
+            <span>Customer stories</span>
+        </div>
+        <div class="ProductList">
+            <span>Resources</span>
+            <span>Blog</span>
+            <span>Guides & tutorials</span>
+            <span>Help center</span>
+        </div>
+        <div class="ProductList">
+            <span>Company</span>
+            <span>About us</span>
+            <span>Careers</span>
+            <span>Media kit</span>
+        </div>
+        <div class="ProductList">
+            <h3>Try It Today</h3>
+            <p>Get started for free. Add your whole team as your needs grow.</p>
+            <button>Start today<img src="./image/Group 212.svg" alt="Arrow icon"></button>
+        </div>
+    </div>
+
+
+
+    <div class="BorderLast"></div>
+       
+
+
+    <div class="ONE">
+        <div class="last-content">
+            <div class="linkS">
+                <div>
+                    <img src="./image/web.svg" alt="">
+                    <span>Products</span>
+                    <img src="./image/Down Arrow.svg" alt="Down Arrow">
+                </div>
+                <div>
+                    <span>PTerms & privacy</span>
+                </div>
+                <div>
+                    <span>Security</span>
+                </div>
+                <div>
+                    <span>Status</span>
+                </div>
+                <div>
+                    <span>©2021 Whitepace LLC.</span>
+                </div>
+            </div>
+            <div class="LogoS">
+                <div>
+                    <img src="./image/facebook.svg" alt="">
+                </div>
+                <div>
+                    <img src="./image/Twitter.svg" alt="">
+                </div>
+                <div>
+                    <img src="./image/in.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</footer>
+
+
+
 
  <script src="./splide-4.1.3/dist/js/splide.min.js"></script>
       
