--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <section class="grid-container">
     <div class="grid-item item-1">
         <div class="Management">
-            <h2>Project Management</h2>
+            <h2>Project Management <img class="Mazok1" src="./image/Mazok.svg" alt=""></h2>
             <p>Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
             <button>Get Started<img src="./image/Group 212.svg" alt=""></button>        
         </div>
@@ -80,7 +80,7 @@
 
     <div class="grid-item item-4">
         <div class="Management">
-            <h2>Work together</h2>
+            <h2>Work together<img class="Mazok2" src="./image/Mazok.svg" alt=""></h2>
             <p>With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
             <button>Try it now<img src="./image/Group 212.svg" alt=""></button>        
         </div>
@@ -93,7 +93,7 @@
 <section class="feature-section">
     <div class="container">
         <div class="feature-info">
-            <h2>Use as <br> Extension</h2>
+            <h2>Use as <br> Extension <img class="Mazok3" src="./image/Mazok.svg" alt=""></h2>
             <p>Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
             <button >Let’s Go<img src="./image/Group 212.svg" alt=""></button>        
         </div>
@@ -109,7 +109,7 @@
     <div class="Customise">
         <img class="Customise-image" src="./image/image4" alt="">
         <div class="Customise-info">
-            <h2>Customise it to your needs</h2>
+            <h2>Customise it to your needs<img class="Mazok4" src="./image/Mazok.svg" alt=""></h2>
             <p>Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
             <button >Let’s Go<img src="./image/Group 212.svg" alt=""></button>        
         </div>
@@ -122,7 +122,7 @@
 
 <section class="user-review">
     <div class="review-intro">
-        <h2>Choose Your Plan</h2>
+        <h2>Choose Your Plan<img class="Mazok5" src="./image/Mazok.svg" alt=""></h2>
         <p>Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
     </div>
     <div class="splide splide1" role="group" aria-label="Splide Basic HTML Example">
@@ -204,7 +204,7 @@
 
 <section class="hero-section">
     <div class="Access">
-        <h2>Your work, everywhere you are</h2>
+        <h2>Your work, everywhere you are<img class="Mazok6" src="./image/Mazok2.svg" alt=""></h2>
         <p>Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
         <button>Try Taskey<img src="./image/Group 212.svg" alt="Arrow icon"></button>
     </div>
@@ -218,7 +218,7 @@
 <section class="grid-container">
     <div class="grid-item item-1">
         <div class="Management">
-            <h2>100% your data</h2>
+            <h2>100% your data<img class="Mazok7" src="./image/Mazok3.svg" alt=""></h2>
             <p>The app is open source and your notes are saved to an open format, so you'll always have access to them. Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.</p>
             <button>Read more<img src="./image/Group 212.svg" alt=""></button>        
         </div>
@@ -235,7 +235,7 @@
 
 <section class="sponsors">
     <div class="sponsors-title">
-        <h2>Our sponsors</h2>
+        <h2>Our sponsors<img class="Mazok8" src="./image/Mazok3.svg" alt=""></h2>
     </div>
     <div class="sponsors-images">
         <img src="./image/aple.svg" alt="Apple Logo" class="sponsor-logo">
