--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div>
                             <span>Personal</span>
                             <span>$11.99</span>
-                            <span>Keep home and family on track</span>
+                            <span>Keep home and family on the track</span>
                         </div>
                         <div>
                             <ul>
