--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
     <meta name="description" content="Get More Done with whitepace. Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks. Supports images, videos, PDFs, and audio files. Create math expressions and diagrams, take photos with the mobile app, and share notes with colleagues. Publish notes to the internet and share URLs.">
     <meta name="keywords" content="project management, team collaboration, task management, notes, images, videos, PDFs, audio files, math expressions, diagrams, mobile app, photo sharing, note publishing">
     
-    <meta property="og:title" content="Get More Done with whitepace">
+    <meta property="og:title" content="Get More Done with WHITEPACE!">
     <meta property="og:description" content="Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks. Supports various file types and allows you to create and share notes, diagrams, and math expressions.">
     <meta property="og:image" content="https://ltdfoto.ru/images/2024/09/03/Project-Management.png">
-    <meta property="og:url" content="URL_of_your_website">
     <meta property="og:type" content="website">
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Get More Done with whitepace">
     <meta name="twitter:description" content="Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks. Create, share, and publish notes with various media formats.">
     <meta name="twitter:image" content="https://ltdfoto.ru/images/2024/09/03/Project-Management.png">
-    <meta name="twitter:url" content="URL_of_your_website">
 
     <link rel="stylesheet" href="./style.css">
 </head>
