--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Get More Done with whitepace">
+    <meta name="twitter:title" content="Get More Done with WHITEPACE!">
     <meta name="twitter:description" content="Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks. Create, share, and publish notes with various media formats.">
     <meta name="twitter:image" content="https://ltdfoto.ru/images/2024/09/03/Project-Management.png">
 
